fix(css): update z-index variables in modal.css and z-index.yaml, bump version to 0.0.8

--- a/packages/css/react/modal.css
+++ b/packages/css/react/modal.css
@@ -23,7 +23,7 @@
   position: fixed;
   inset: 0;
   animation: overlay-show 150ms cubic-bezier(0.16, 1, 0.3, 1);
-  z-index: var(--z-index-modal);
+  z-index: var(--z-index-overlay);
 }
 
 .cocso-modal-close-wrapper {
@@ -56,7 +56,7 @@
   border-radius: 6px;
   background-color: var(--color-palette-gray-0);
   animation: content-show 150ms cubic-bezier(0.16, 1, 0.3, 1);
-  z-index: var(--z-index-modal-content);
+  z-index: var(--z-index-modal);
 }
 
 .cocso-modal-title {
